[gd_scene load_steps=4 format=3 uid="uid://bcdeadrl3t4we"]

[ext_resource type="TileSet" uid="uid://dega0iol75x2x" path="res://Resources/TileSets/sample_tileset.tres" id="1_6hlxt"]
[ext_resource type="Script" path="res://Scenes/CrissCrossGrid/criss_cross_grid.gd" id="1_vh1b7"]

[sub_resource type="TileSet" id="TileSet_10kni"]
tile_shape = 1
tile_size = Vector2i(256, 256)

[node name="CrissCrossGrid" type="Node2D"]
script = ExtResource("1_vh1b7")
GridSize = 6

[node name="SquareTopLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_6hlxt")
rendering_quadrant_size = 128

[node name="SquareBotLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_6hlxt")
rendering_quadrant_size = 128

[node name="IsoLayer" type="TileMapLayer" parent="."]
position = Vector2(-128, -128)
tile_set = SubResource("TileSet_10kni")
rendering_quadrant_size = 256
